--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www",
-    "test": "mocha --recursive --timeout 60000 --exit"
+    "start": "nodemon --exec babel-node ./bin/www",
+    "test": "mocha --require @babel/register --recursive --timeout 60000 --exit"
   },
   "dependencies": {
     "app-root-path": "^3.0.0",
@@ -20,5 +20,14 @@
     "request-promise": "^4.2.5",
     "supertest": "^4.0.2",
     "winston": "^3.2.1"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.7.7",
+    "@babel/node": "^7.7.7",
+    "@babel/plugin-transform-runtime": "^7.7.6",
+    "@babel/preset-env": "^7.7.7",
+    "@babel/register": "^7.7.7",
+    "@babel/runtime": "^7.7.7",
+    "nodemon": "^2.0.2"
   }
 }
