--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "start": "nodemon --exec babel-node ./bin/www",
-    "test": "mocha --require @babel/register --recursive --timeout 60000 --exit"
+    "test": "mocha --require @babel/register --recursive --timeout 60000 --exit",
+    "debug": "node --nolazy --inspect-brk=9229 ./bin/www"
   },
   "dependencies": {
     "app-root-path": "^3.0.0",
