--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "nodemon --exec babel-node ./bin/www",
+    "start": "node ./build/bin/www",
+    "start:dev": "nodemon --exec babel-node ./src/bin/www",
+    "build": "rm -rf ./build && mkdir build && babel --out-dir ./build --source-maps --copy-files ./src",
     "test": "mocha --require @babel/register --recursive --timeout 60000 --exit",
-    "debug": "node --nolazy --inspect-brk=9229 ./bin/www"
+    "debug": "node --nolazy --inspect-brk=9229 ./src/bin/www"
   },
   "dependencies": {
     "app-root-path": "^3.0.0",
@@ -23,6 +25,7 @@
     "winston": "^3.2.1"
   },
   "devDependencies": {
+    "@babel/cli": "^7.8.4",
     "@babel/core": "^7.7.7",
     "@babel/node": "^7.7.7",
     "@babel/plugin-transform-runtime": "^7.7.6",
