--- a/package.json
+++ b/package.json
@@ -11,14 +11,15 @@
   },
   "dependencies": {
     "app-root-path": "^3.0.0",
+    "aws-sdk": "^2.663.0",
     "chai": "^4.2.0",
-    "cookie-parser": "~1.4.4",
+    "cookie-parser": "^1.4.5",
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
     "express": "~4.16.1",
-    "mocha": "^6.2.2",
+    "mocha": "^6.2.3",
     "mockgoose": "^8.0.4",
-    "mongoose": "^5.7.9",
+    "mongoose": "^5.9.10",
     "morgan": "~1.9.1",
     "request-promise": "^4.2.5",
     "supertest": "^4.0.2",
@@ -26,12 +27,12 @@
   },
   "devDependencies": {
     "@babel/cli": "^7.8.4",
-    "@babel/core": "^7.7.7",
-    "@babel/node": "^7.7.7",
-    "@babel/plugin-transform-runtime": "^7.7.6",
-    "@babel/preset-env": "^7.7.7",
-    "@babel/register": "^7.7.7",
-    "@babel/runtime": "^7.7.7",
-    "nodemon": "^2.0.2"
+    "@babel/core": "^7.9.0",
+    "@babel/node": "^7.8.7",
+    "@babel/plugin-transform-runtime": "^7.9.0",
+    "@babel/preset-env": "^7.9.5",
+    "@babel/register": "^7.9.0",
+    "@babel/runtime": "^7.9.2",
+    "nodemon": "^2.0.3"
   }
 }
