--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "@babel/preset-env": "^7.9.5",
     "@babel/register": "^7.9.0",
     "@babel/runtime": "^7.9.2",
+    "eslint": "^7.3.1",
+    "eslint-config-google": "^0.14.0",
     "nodemon": "^2.0.3"
   }
 }
