--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,6 +11,7 @@
         "sourceType": "module"
     },
     "rules": {
-        "semi": "off"
+        "semi": "off",
+        "new-cap": "off"
     }
 }
