--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
     "express": "~4.16.1",
+    "helmet": "^4.1.0",
     "mocha": "^6.2.3",
     "mockgoose": "^8.0.4",
     "mongoose": "^5.9.10",
